--- a/src/components/Projects.module.css
+++ b/src/components/Projects.module.css
@@ -1,6 +1,5 @@
 .projects {
   padding: 5rem 3rem;
-  background: var(--dark);
 }
 
 .sectionLabel {
